--- a/client/static/index.html
+++ b/client/static/index.html
@@ -7,8 +7,8 @@
     <title>J.A.R.V.I.S</title>
 
     <!--LOCAL STYLESHEETS/SCRIPTS-->
-    <link rel="stylesheet" href="dist/style.css">
-    <script src="dist/script.js"></script>
+    <link rel="stylesheet" href="static/dist/style.css">
+    <script src="static/dist/script.js"></script>
 
     <!--CDN IMPORTS-->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -16,22 +16,32 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 
-<body class="badge-light">
+<body class="badge-dark">
     <h1 class="display-4">J.A.R.V.I.S interface</h1>
 
     <form action="/" method="get">
-        <input type="text" id="queryBox" class="form-control w-25" name="q" placeholder="Say anything to J.A.R.V.I.S"
-            autocomplete="off">
+        <input type="text" id="queryBox" class="form-control w-75" name="q" placeholder="Say anything to J.A.R.V.I.S"
+            autocomplete="off" autocapitalize="off">
         <input type="submit" class="btn btn-outline-success" value="Submit">
     </form>
 
     <div class="lead mt-5">
         <p class="text-capitalize text-dark">Quick Shortcuts</p>
-        <a href="/?q=https://www.google.com">Google</a>
-        <a href="/?q=https://www.reddit.com">Reddit</a>
-        <a href="/?q=https://www.youtube.com">Youtube</a>
-        <a href="/?q=https://twitch.tv">Twitch</a>
-        <a href="/?q=https://gmail.com">Gmail</a>
+        <a class="text-white font-weight-normal" href="/?q=https://www.google.com">Google</a>
+        <a class="text-white font-weight-normal" href="/?q=https://www.reddit.com">Reddit</a>
+        <a class="text-white font-weight-normal" href="/?q=https://www.youtube.com">Youtube</a>
+        <a class="text-white font-weight-normal" href="/?q=https://twitch.tv">Twitch</a>
+        <a class="text-white font-weight-normal" href="/?q=https://gmail.com">Gmail</a>
+
+        <!--Mode Selection-->
+        <div>
+            <select class="list-group badge-warning" id="mode-selection" onchange="changeMode(this.value);">
+                <option class="list-group-item" value="interaction">Interaction</option>
+                <option class="list-group-item" value="ambiant">Ambiant</option>
+                <option class="list-group-item" value="watermark">Watermark</option>
+                <option class="list-group-item" value="music">Music</option>
+              </select>
+        </div>
     </div>
 </body>
 
